gcc/testsuite/algol68/compile/error-module-definition-2.a68
module Module = { dg-error "" }
begin
end
